# DPAD

./: .gitattributes  .gitignore  ChangeLog.md  LICENSE.md  README.md  pyproject.toml  requirements-dev.txt  requirements.txt
source/: setup.py
source/DPAD/: DPADModel.py  DPADModelDoc.md  RNNModel.py  RNNModelDoc.md  RegressionModel.py  RegressionModelDoc.md  __init__.py
source/DPAD/example/: DPAD_tutorial.ipynb
source/DPAD/tests/: test_DPADModel.py  test_RNNModel.py
source/DPAD/tools/: GaussianSmoother.py  LinearMapping.py  SSM.py  abstract_classes.py  evaluation.py  file_tools.py  flexible.py  model_base_classes.py  parse_tools.py  plot.py  plot_model_params.py  sim_tools.py  tf_losses.py  tf_tools.py  tools.py
source/DPAD/tools/tests/: test_LinearMapping.py  test_parse_tools.py  test_tf_losses.py  test_tools.py
