[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "DPAD"
version = "0.0.8"
authors = [
    {name = "Omid Sani", email = "omidsani@gmail.com"},
]
description = "Python implementation for DPAD (dissociative and prioritized analysis of dynamics)"
requires-python = ">=3.11"
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
]
dependencies = [
    "tensorflow==2.15.1",
    "numpy==1.26.4",
    "PSID==1.2.5",
    "coloredlogs==15.0.1",
    "tqdm==4.66.4",
    "xxhash==3.5.0"
]
dynamic = ["readme"]

[project.urls]
Homepage = "https://github.com/ShanechiLab/DPAD"
Issues = "https://github.com/ShanechiLab/DPAD/issues"

[tool.setuptools.dynamic]
readme = {file = ["README.md"], content-type = "text/markdown"}

[tool.setuptools.packages.find]
where = ["source"]  # list of folders that contain the packages (["."] by default)